--- a/index.html
+++ b/index.html
@@ -115,19 +115,19 @@
                             <div class="icon github">
                                 <a href="https://github.com/malle2002">
                                     <div class="tooltip">Github</div>
-                                    <span><i class="fab fa-github"></i></span>
+                                    <span><i class="fa fa-github"></i></span>
                                 </a>
                             </div>
                             <div class="icon youtube">
                                 <a href="https://www.youtube.com/channel/UC-A89_tcNtIunSOjfD_VmOA">
                                     <div class="tooltip">Youtube</div>
-                                    <span><i class="fab fa-youtube"></i></span>
+                                    <span><i class="fa fa-youtube"></i></span>
                                 </a>
                             </div>
                             <div class="icon twitter">
                                 <a href="https://twitter.com/Atanas123Master">
                                     <div class="tooltip">Twitter</div>
-                                    <span><i class="fab fa-twitter"></i></span>
+                                    <span><i class="fa fa-twitter"></i></span>
                                 </a>
                             </div>
                             <div class="icon mail">
@@ -167,7 +167,7 @@
             <i class="fas fa-angle-up"></i>
         </div>
         <footer>
-            <span>Made in 2022.<span class="far fa-copyright">All right reserved.</span></span>
+            <span>Made in 2022.<span class="fas fa-copyright">All right reserved.</span></span>
         </footer>
     </div>
 </body>
