--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <i class="fas fa-angle-up"></i>
         </div>
         <footer>
-            <span>Made in 2022.<span class="fas fa-copyright">All right reserved.</span></span>
+            <span>Made in 2022.<span class="fa fa-copyright">All right reserved.</span></span>
         </footer>
     </div>
 </body>
