--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </div>
         </section>
         <div class="scrollup-btn">
-            <i class="fas fa-angle-up"></i>
+            <i class="fa fa-angle-up"></i>
         </div>
         <footer>
             <span>Made in 2022.<span class="fa fa-copyright">All right reserved.</span></span>
